Fix adaptive css for shiftCover

--- a/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/src/components/RegistrationForm/RegistrationForm.module.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     padding: 1.5em 0em;
-    margin: 1.5em auto;
-    width: 70%;
+    margin: 0em auto;
+    width: 74%;
     align-items: center;
     grid-row-gap: 1em;
     border-style: solid;
@@ -85,5 +85,8 @@ label{
 @media screen and (max-width: 479px){
     form {
       width: 100%;
+    }
+    .registrationForm{
+        width: 80%;
     }
   }
